plugins {
   id "io.spring.dependency-management" version "${spring_dep}"
   id 'org.springframework.boot' version "${spring_boot_ver}"
}

ext {
    lib = ["boot" : "org.springframework.boot:spring-boot-dependencies:${spring_boot_ver}",
           "p6spy" : "p6spy:p6spy:${p6spy}",
           "flyway" : "org.flywaydb:flyway-core:${flyway}",
           // database
           "mysql" : "mysql:mysql-connector-java:${mysql}",
           "oracle" : "com.oracle.database.jdbc:ojdbc10:${oracle}",
           "orai18n": "cn.easyproject:orai18n:${orai18n}",
           "jaxb_api" : "javax.xml.bind:jaxb-api:${jaxb_api}",
           "truelicense" : "de.schlichtherle.truelicense:truelicense-core:${truelicense}",
           "jasypt" : "com.github.ulisesbocchio:jasypt-spring-boot-starter:${jasypt}",
           "validation" : "org.springframework.boot:spring-boot-starter-validation",
           "json" : "org.springframework.boot:spring-boot-starter-json",
            "jsr310" : "com.fasterxml.jackson.datatype:jackson-datatype-jsr310:${jsr310}",
           // lombok
           "lombok" : "org.projectlombok:lombok:${lombok}",
            // cache
           "caffeine" : "com.github.ben-manes.caffeine:caffeine:${caffeine}",
           "redis" : "org.springframework.boot:spring-boot-starter-data-redis",
           "cache" : "org.springframework.boot:spring-boot-starter-cache",
           // AOP
           "aop" : "org.springframework.boot:spring-boot-starter-aop",
           "jdbc" : "org.springframework.boot:spring-boot-starter-jdbc",
           // security
           "security" : "org.springframework.boot:spring-boot-starter-security",
           // web
           "web" : "org.springframework.boot:spring-boot-starter-web",
           "undertow" : "org.springframework.boot:spring-boot-starter-undertow",
            // test
           "test" : "org.springframework.boot:spring-boot-starter-test",
           "securityTest" : "org.springframework.security:spring-security-test:${securityTest}",
           // hutool
           "hutool" : "cn.hutool:hutool-all:${hutool}",
           // mybatis
           "mybatisPlus" : "com.baomidou:mybatis-plus-boot-starter:${mybatis_plus_starter}",
           // 文档聚合
           "springdoc" : "org.springdoc:springdoc-openapi-starter-webmvc-api:${springdoc}",
           "springdocui" : "org.springdoc:springdoc-openapi-starter-webmvc-ui:${springdoc}",
           // swagger
           "knife4j_ui" : "com.github.xiaoymin:knife4j-openapi3-ui:${knife4j}",
            // jwt
           "jwt": "com.nimbusds:nimbus-jose-jwt:${jwt}",
            // 线程增强
           "ttl": "com.alibaba:transmittable-thread-local:${ttl}",
           // websocket
           "websocket": "org.springframework.boot:spring-boot-starter-websocket",
           // wxjava
           "wxmp" : "com.github.binarywang:weixin-java-mp:${weixin}",
           "wxpay" : "com.github.binarywang:weixin-java-pay:${weixin}",
            // ali
           "alipay" : "com.alipay.sdk:alipay-sdk-java:${alipay}",
           "zxing" : "com.google.zxing:core:${zxing}",
            // bootAdmin
           "bootAdminServer" : "de.codecentric:spring-boot-admin-starter-server:${boot_admin}",
           "bootAdmin" : "de.codecentric:spring-boot-admin-starter-client:${boot_admin}",
           "devTools" : "org.springframework.boot:spring-boot-devtools",
            // generator
           "velocity" : "org.apache.velocity:velocity-engine-core:${velocity}",
           "mybatis_plus_generator" : "com.baomidou:mybatis-plus-generator:${mybatis_plus_generator}"
    ]
}

allprojects {
    group = 'io.nerv'
    version = '3.0.2'
}

subprojects {
    apply plugin: 'java-library'
	apply plugin: 'maven-publish'
    apply plugin: 'signing'
	apply plugin: 'idea'

    apply plugin: 'io.spring.dependency-management'

	sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17

    dependencyManagement {
        imports {
            mavenBom "${lib.boot}"
        }
    }

    tasks.withType(JavaCompile).configureEach {
        options.encoding = "UTF-8"
    }

    tasks.withType(Javadoc).configureEach {
        options.encoding = "UTF-8"
        options.addStringOption('Xdoclint:none', '-quiet')
    }

    repositories {
        mavenLocal()
        //maven {
        //    url "http://192.168.10.12:8082/artifactory/public/"
        //    allowInsecureProtocol = true
        //}
//        allowInsecureProtocol = true
		maven { url"https://maven.aliyun.com/repository/public" }
        maven { url"https://maven.aliyun.com/repository/spring" }
        maven { url"https://maven.aliyun.com/repository/spring-plugin" }
		maven { url"https://maven.springframework.org"}
        maven { url"https://repo.spring.io/libs-release" }

        mavenCentral()
    }

    dependencies {
       implementation       "${lib.lombok}"
	   annotationProcessor  "${lib.lombok}"

        testImplementation "${lib.test}",
                           "${lib.securityTest}"

     }
}

